# ztox

./: .gitignore  README.md  install.ps1  install.sh
desktop/: .cirrus.yml  .clang-tidy  .clog.toml  .dockerignore  .gitignore  .imgbotconfig  .restyled.yaml  .weblate  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INSTALL.md  MAINTAINING.md  README.md  cspell.config.yaml  netlify.toml  res.qrc
desktop/.ci-scripts/: .gitignore  build-docs.sh  build-qtox-linux-static.sh  build-qtox-linux.sh  create-identity.sh  deploy-docs.sh  import-developer-keys.sh  lcov.sh  package-qtox-linux.sh  smoke-test.sh  verify-commit-format.sh
desktop/.circleci/: config.yml
desktop/.github/: release-drafter.yml
desktop/.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
desktop/.github/keys/: iphydf.asc
desktop/.github/scripts/: install_apple_cert
desktop/.github/workflows/: build-package.yml  build-test-deploy.yml  ci.yml  codeql.yml  coverity-scan.yml  draft.yml
desktop/.netlify/: state.json
desktop/audio/: BUILD.bazel  CMakeLists.txt  README.md
desktop/audio/resources/: audio_res.qrc  call_incoming.s16le.pcm  call_outgoing.s16le.pcm  notification.s16le.pcm
desktop/audio/src/: audio.cpp  iaudiosettings.cpp  iaudiosink.cpp
desktop/cmake/: Dependencies.cmake  Installation.cmake  Package.cmake  Testing.cmake
desktop/cmake/warnings/: CMakeLists.txt
desktop/doc/: coding_standards.md  user_manual_en.md
desktop/platform/: deps.depfile
desktop/platform/flatpak/: io.github.qtox.qTox.json  localize_flathub_descriptor.py
desktop/platform/linux/: io.github.qtox.qTox.appdata.xml  io.github.qtox.qTox.desktop  io.github.whisxeybob.ztox.appdata.xml  io.github.whisxeybob.ztox.desktop
desktop/platform/macos/: BUILD.bazel  Brewfile  Brewfile-static  Info.plist  asan.supp  run-debug  update-plist-version.sh
desktop/platform/wasm/: Dockerfile  build.sh  run.sh
desktop/platform/windows/: BUILD.bazel  qtox-nsi-version.sh  qtox.rc  qtox64.nsi  ztox.rc  ztox64.nsi
desktop/res/: nodes.json
desktop/smileys/: blocked_smileys.json  messaging-emoticon-map.xsd  update_smileys.py
desktop/smileys/Classic/: emoticons.qrc  emoticons.xml
desktop/smileys/EmojiOne/: emoticons.qrc  emoticons.xml
desktop/smileys/Universe/: emoticons.qrc  emoticons.xml
desktop/src/: BUILD.bazel  appmanager.cpp  appmanager.h  conferencelist.cpp  conferencelist.h  friendlist.cpp  friendlist.h  ipc.cpp  ipc.h  loginscreen.ui  main.cpp  mainwindow.ui  nexus.cpp  nexus.h  version.cpp.in  version.h
desktop/src/chatlog/: chatline.cpp  chatline.h  chatlinecontent.cpp  chatlinecontent.h  chatlinecontentproxy.cpp  chatlinecontentproxy.h  chatlinestorage.cpp  chatlinestorage.h  chatmessage.cpp  chatmessage.h  chatwidget.cpp  chatwidget.h  customtextdocument.cpp  customtextdocument.h  documentcache.cpp  documentcache.h  pixmapcache.cpp  pixmapcache.h  textformatter.cpp  textformatter.h
desktop/src/core/: chatid.cpp  chatid.h  conferenceid.cpp  conferenceid.h  core.cpp  core.h  coreav.cpp  coreav.h  corefile.cpp  corefile.h  dhtserver.cpp  dhtserver.h  icoreconferencemessagesender.cpp  icoreconferencemessagesender.h  icoreconferencequery.cpp  icoreconferencequery.h  icorefriendmessagesender.cpp  icorefriendmessagesender.h  icoreidhandler.cpp  icoreidhandler.h  icoresettings.cpp  icoresettings.h  idebugsettings.cpp  idebugsettings.h  receiptnum.h  toxcall.cpp  toxcall.h  toxencrypt.cpp  toxencrypt.h  toxfile.cpp  toxfile.h  toxfilepause.h  toxfileprogress.cpp  toxfileprogress.h  toxid.cpp  toxid.h  toxlogger.cpp  toxlogger.h  toxoptions.cpp  toxoptions.h  (+4 more)
desktop/src/model/: brokenmessagereason.h  chat.cpp  chat.h  chathistory.cpp  chathistory.h  chatlogitem.cpp  chatlogitem.h  chatmanager.cpp  chatmanager.h  conference.cpp  conference.h  conferenceinvite.cpp  conferenceinvite.h  conferencemessagedispatcher.cpp  conferencemessagedispatcher.h  exiftransform.cpp  exiftransform.h  friend.cpp  friend.h  friendmessagedispatcher.cpp  friendmessagedispatcher.h  ibootstraplistgenerator.cpp  ibootstraplistgenerator.h  ichatlog.h  imessagedispatcher.cpp  imessagedispatcher.h  message.cpp  message.h  notificationdata.h  notificationgenerator.cpp  notificationgenerator.h  sessionchatlog.cpp  sessionchatlog.h  status.cpp  status.h  systemmessage.h  toxclientstandards.h
desktop/src/net/: avatarbroadcaster.cpp  avatarbroadcaster.h  bootstrapnodeupdater.cpp  bootstrapnodeupdater.h  toxuri.cpp  toxuri.h  updatecheck.cpp  updatecheck.h  updateversion.cpp  updateversion.h
desktop/src/persistence/: globalsettingsupgrader.cpp  globalsettingsupgrader.h  history.cpp  history.h  iconferencesettings.cpp  iconferencesettings.h  ifriendsettings.cpp  ifriendsettings.h  inotificationsettings.cpp  inotificationsettings.h  ismileysettings.cpp  ismileysettings.h  offlinemsgengine.cpp  offlinemsgengine.h  paths.cpp  paths.h  personalsettingsupgrader.cpp  personalsettingsupgrader.h  profile.cpp  profile.h  profilelocker.cpp  profilelocker.h  serialize.cpp  serialize.h  settings.cpp  settings.h  settingsserializer.cpp  settingsserializer.h  smileypack.cpp  smileypack.h  toxsave.cpp  toxsave.h
desktop/src/platform/: autorun.h  autorun_osx.cpp  autorun_win.cpp  autorun_xdg.cpp  capslock.h  capslock_osx.cpp  capslock_win.cpp  capslock_x11.cpp  posixsignalnotifier.cpp  posixsignalnotifier.h  screenshot.cpp  screenshot.h  screenshot_dbus.cpp  screenshot_dbus.h  stacktrace.cpp  stacktrace.h  timer.h  timer_osx.cpp  timer_win.cpp  timer_x11.cpp  x11_display.cpp  x11_display.h
desktop/test/: BUILD.bazel
desktop/tools/: format-code.sh  lsp_tidy.py  run-clang-tidy  translate_ai.py  translation_status.py  update-translation-files.sh  update-versions.sh
desktop/translations/: CMakeLists.txt  README.md  ar.ts  be.ts  ber.ts  bg.ts  bn.ts  ca.ts  cs.ts  da.ts  de.ts  el.ts  en.ts  eo.ts  es.ts  et.ts  fa.ts  fi.ts  fr.ts  gl.ts  he.ts  hr.ts  hu.ts  is.ts  it.ts  ja.ts  jbo.ts  kmr.ts  kn.ts  ko.ts  li.ts  lt.ts  lv.ts  mk.ts  nb_NO.ts  nl.ts  nl_BE.ts  pl.ts  pr.ts  pt.ts  (+21 more)
desktop/util/: BUILD.bazel  CMakeLists.txt
(+377 files in other folders)
